# BenchCalc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh-CN.md  adaptive_chunk_selector.h  improved_chunk_selector.h  smart_chunk_selector.h  ultimate_chunk_predictor.h
.github/workflows/: benchmark-manual.yml  benchmark-matrix.yml  ci-multi-platform.yml
bench/: README.md  chunk_bench_core.h  chunk_bench_main.cpp  expression_method_bench.cpp  run_bench.ps1  run_expr_bench.ps1  run_expr_mt_matrix.ps1
bench/expr/: ast.hpp  bench_types.hpp  benchmark.hpp  cases.hpp  cli.hpp  core_ast_parser.hpp  evaluator.hpp  method_chunk_pipeline.hpp  method_graph_fused.hpp  method_hardcoded.hpp  method_interface.hpp  method_opencl_dynamic.hpp  method_plain_loop4.hpp  method_vm.hpp  methods.hpp  parser_expr.hpp  parser_json.hpp  pattern_matcher.hpp  prelude.hpp  report.hpp  runner.hpp  system_tuning.hpp
bench/tools/: aggregate_expr.py
tests/: expr_unit_tests.cpp
